--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ VITE_USE_CUSTOM_PNL_POSTERS=false
 VITE_CUSTOM_PNL_POSTER_COUNT=0
 VITE_TRADING_VIEW_COLOR_CONFIG=
 VITE_AVAILABLE_LANGUAGES=en,nl,pl,uk,pt,ru,ko,vi,id,zh,ja,de,tr,it,fr,es
-VITE_SEO_SITE_NAME=Darkwater DEX
+VITE_SEO_SITE_NAME=Darkwater
 VITE_SEO_SITE_DESCRIPTION=
 VITE_SEO_SITE_URL=https://dex.orderly.network/darkwater-7802/
 VITE_SEO_SITE_LANGUAGE=en
