--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ VITE_TWITTER_URL=
 VITE_WALLETCONNECT_PROJECT_ID=
 VITE_PRIVY_APP_ID=
 VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=Trading,Leaderboard,Portfolio,Rewards,Markets
+VITE_ENABLED_MENUS=Trading,Markets,Portfolio,Leaderboard
 VITE_CUSTOM_MENUS=
 VITE_ENABLE_ABSTRACT_WALLET=false
 VITE_DISABLE_MAINNET=false
